--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -143,6 +143,12 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.constraintlayout.widget.Group
+            android:layout_width="0dp"
+            android:id="@+id/character_detail_group"
+            app:constraint_referenced_ids="image_item_character_detail,txt_item_id_detail,txt_item_name_detail,txt_item_status_detail,txt_item_character_type"
+            android:layout_height="0dp"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
