--- a/app/src/main/res/layout/fragment_episode_detail.xml
+++ b/app/src/main/res/layout/fragment_episode_detail.xml
@@ -143,6 +143,12 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.constraintlayout.widget.Group
+            android:layout_width="0dp"
+            android:id="@+id/group_episode_detail"
+            app:constraint_referenced_ids="txt_item_id,txt_item_name,txt_item_episode,txt_item_created,txt_item_air_date"
+            android:layout_height="0dp"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
