--- a/app/src/main/res/layout/fragment_location_detail.xml
+++ b/app/src/main/res/layout/fragment_location_detail.xml
@@ -144,6 +144,12 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.constraintlayout.widget.Group
+            android:layout_width="0dp"
+            android:id="@+id/group_location_detail"
+            app:constraint_referenced_ids="txt_item_id_location,txt_item_name,txt_item_dimension,txt_item_created,txt_item_type"
+            android:layout_height="0dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
